# Modern-C---with-OpenCV

Week 0/: pipingAndRedirection.sh
Week 0/Example Program/: error.txt  valid.cpp
Week 0/Homework/task_1/: commands.sh
Week 0/Homework/task_2/: CMakeLists.txt  build.sh  install.sh
Week 0/exampleProgram/: valid
Week 0/exampleProgram/1/: std_output.txt
Week 0/exampleProgram/2/: main.cpp  main.i  main.s
Week 0/exampleProgram/3 - Building a library/: CMakeLists.txt  tools.cpp
Week 0/exampleProgram/3T - Building a library/: main.cpp  tools.hpp
Week 1/Example Programs/2T - Compiling steps/: main
